--- a/css/style.css
+++ b/css/style.css
@@ -183,8 +183,17 @@ a{color: #fff1e0; text-decoration: none;}
     transform: translateY(-50px);
     transition: 1s ease;
 }
-.character_box li:nth-child(3){ /*이화*/
-    background-color: rgba(132, 132, 132, 0.2);
+.character_box li:nth-child(3) a{ /*이화*/
+    background-image: url(../img/character_pick_3.png);
+    opacity: 0.15;
+    transition: all 2s;
+}
+.character_box li:nth-child(3):hover a{
+    opacity: 1;
+    background-blend-mode: normal;
+    background-image: url(../img/character_pick_3.png);
+    transform: translateY(-50px);
+    transition: 1s ease;
 }
 .character_box li:nth-child(4){ /*선율*/
     background-color: rgba(132, 132, 132, 0.2);
